# financy-home

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
app/api/v1/: health.py  router.py  transactions.py
app/core/: config.py  db.py
app/models/: transaction.py
app/schemas/: transaction.py
app/services/: transaction_service.py
migrations/: env.py
migrations/versions/: 35e431ab68b1_create_transaction_table.py
specs/: 01-fastapi-backend-scaffolding.md  02-database-layer.md  03-transaction-repository-service.md
tests/: conftest.py  test_db.py  test_health.py  test_transaction_service.py  test_transactions_api.py
